--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\ander\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Thesiz\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
