--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/Remit.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.substance-4.3.jar=src\\recursos\\substance-4.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.substance-4.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
