--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,7 @@
 compile.on.save=false
 do.depend=false
 do.jar=true
+file.reference.substance-4.3.jar=C:\\Users\\Ander\\Desktop\\Remit\\src\\recursos
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Ander\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
