--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.substance-4.3.jar=src\\recursos\\substance-4.3.jar
+file.reference.substance-4.3.jar-1=C:\\Users\\Ander\\Desktop\\Proyecto\\Remit\\src\\recursos\\substance-4.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.substance-4.3.jar}
+    ${file.reference.substance-4.3.jar}:\
+    ${file.reference.substance-4.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
